fix: gap

--- a/app/src/features/settings/secrets-manager/ProviderDetails/providerDetails.scss
+++ b/app/src/features/settings/secrets-manager/ProviderDetails/providerDetails.scss
@@ -2,7 +2,7 @@
   display: flex;
   flex-direction: column;
   width: 100%;
-  gap: 12px;
+  gap: 8px;
   margin-top: 24px;
 
   .provider-panel-header {
